<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TSIS</string>
    <string name="action_settings">Settings</string>
    <string name="stopped">stopped</string>
    <string name="running">running</string>
    <string name="state">State:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="statistics">Statistics:</string>
    <string name="distance">Distance </string>
    <string name="altitude">Altitude </string>
    <string name="service_running_title">TSIS is running!</string>
    <string name="service_running_text">TSIS service is still running. Use the application to stop it.</string>
    <string name="distance_fifteen_min">Distance of the last 15 Minutes</string>
    <string name="altitude_fifteen_min">Alitude of the last 15 Minutes</string>
    <string name="height_fifteen_min">Height of the last 15 Minutes</string>
</resources>
